--- a/index.html
+++ b/index.html
@@ -249,7 +249,8 @@
               Thus, $b=\frac{3}{2}, A=(1/2, 1/4), B=(3/2,-3/4)$, and the
               distance is $\sqrt{2}$.
             </p>
-            <pre><code class="Matlab">p = [4 0 3 -2]; % the coeffcients following the decreasing order
+            <pre><code class="Matlab">% coeffcients following the decreasing order
+p = [4 0 3 -2]; 
 roots(p); % compute the roots </code></pre>
           </div>
         </div>
